[gd_scene load_steps=38 format=3 uid="uid://bciy50bbuapon"]

[ext_resource type="Script" path="res://scripts/characters/boss_slime.gd" id="1_1ks83"]
[ext_resource type="Texture2D" uid="uid://cjqa6lp3nsip0" path="res://assets/enemies/CyberSlime/slime_attack/slime_attack1.png" id="2_is0pv"]
[ext_resource type="Texture2D" uid="uid://bg51u5f44wncw" path="res://assets/enemies/CyberSlime/slime_attack/slime_attack2.png" id="3_2wkpy"]
[ext_resource type="Texture2D" uid="uid://bmkvf3sipot8y" path="res://assets/enemies/CyberSlime/slime_attack/slime_attack3.png" id="4_d44ny"]
[ext_resource type="Texture2D" uid="uid://npmnrwju8fsj" path="res://assets/enemies/CyberSlime/slime_attack/slime_attack4.png" id="5_3fhmi"]
[ext_resource type="Texture2D" uid="uid://b0wv0iffkw6ym" path="res://assets/enemies/CyberSlime/slime_attack/slime_attack5.png" id="6_co61y"]
[ext_resource type="Texture2D" uid="uid://dvy5lt3jm7fb5" path="res://assets/enemies/CyberSlime/slime_attack/slime_attack6.png" id="7_3ies1"]
[ext_resource type="Texture2D" uid="uid://dy15jemrtajkh" path="res://assets/enemies/CyberSlime/slime_death/silme_death_1.png" id="8_1rt4b"]
[ext_resource type="Texture2D" uid="uid://bor3ehb15j5bl" path="res://assets/enemies/CyberSlime/slime_death/silme_death_2.png" id="9_r8roh"]
[ext_resource type="Texture2D" uid="uid://bxjjtvublri80" path="res://assets/enemies/CyberSlime/slime_death/silme_death_3.png" id="10_gl3tv"]
[ext_resource type="Texture2D" uid="uid://d2l2q8abu432d" path="res://assets/enemies/CyberSlime/slime_death/silme_death_4.png" id="11_a7wen"]
[ext_resource type="Texture2D" uid="uid://dlcrxiq55s8sp" path="res://assets/enemies/CyberSlime/slime_death/silme_death_5.png" id="12_75d57"]
[ext_resource type="Texture2D" uid="uid://b5v4xkco57y1u" path="res://assets/enemies/CyberSlime/slime_death/silme_death_6.png" id="13_cnenf"]
[ext_resource type="Texture2D" uid="uid://cwwwrvro12c85" path="res://assets/enemies/CyberSlime/slime_death/silme_death_7.png" id="14_s2rl3"]
[ext_resource type="Texture2D" uid="uid://d0vl31a3q53v3" path="res://assets/enemies/CyberSlime/slime_death/silme_death_8.png" id="15_5lle3"]
[ext_resource type="Texture2D" uid="uid://c3di7mxe88lpj" path="res://assets/enemies/CyberSlime/slime_idle/slime_idle_1.png" id="16_ov674"]
[ext_resource type="Texture2D" uid="uid://btxnjmyoo6qly" path="res://assets/enemies/CyberSlime/slime_idle/slime_idle_2.png" id="17_sxjwj"]
[ext_resource type="Texture2D" uid="uid://dg75fm3fi7us0" path="res://assets/enemies/CyberSlime/slime_idle/slime_idle_3.png" id="18_qvhgf"]
[ext_resource type="Texture2D" uid="uid://ch2w2hqo40xnm" path="res://assets/enemies/CyberSlime/slime_idle/slime_idle_4.png" id="19_qk1yu"]
[ext_resource type="Texture2D" uid="uid://di01lll3owi2g" path="res://assets/enemies/CyberSlime/slime_idle/slime_idle_5.png" id="20_24unw"]
[ext_resource type="Texture2D" uid="uid://di67bmm8jpthi" path="res://assets/enemies/CyberSlime/slime_idle/slime_idle_6.png" id="21_3numq"]
[ext_resource type="Script" path="res://scripts/characters/character_facing.gd" id="22_853x2"]
[ext_resource type="Script" path="res://scripts/battle/hurt_box.gd" id="23_xislm"]
[ext_resource type="Script" path="res://scripts/battle/hit_box.gd" id="24_680pr"]
[ext_resource type="Texture2D" uid="uid://do25ap0ds3hwk" path="res://assets/interface/heart.png" id="25_iakgd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5w2is"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_is0pv")
}, {
"duration": 1.0,
"texture": ExtResource("3_2wkpy")
}, {
"duration": 1.0,
"texture": ExtResource("4_d44ny")
}, {
"duration": 1.0,
"texture": ExtResource("5_3fhmi")
}, {
"duration": 1.0,
"texture": ExtResource("6_co61y")
}, {
"duration": 1.0,
"texture": ExtResource("7_3ies1")
}],
"loop": false,
"name": &"attack",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_1rt4b")
}, {
"duration": 1.0,
"texture": ExtResource("9_r8roh")
}, {
"duration": 1.0,
"texture": ExtResource("10_gl3tv")
}, {
"duration": 1.0,
"texture": ExtResource("11_a7wen")
}, {
"duration": 1.0,
"texture": ExtResource("12_75d57")
}, {
"duration": 1.0,
"texture": ExtResource("13_cnenf")
}, {
"duration": 1.0,
"texture": ExtResource("14_s2rl3")
}, {
"duration": 1.0,
"texture": ExtResource("15_5lle3")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_ov674")
}, {
"duration": 1.0,
"texture": ExtResource("17_sxjwj")
}, {
"duration": 1.0,
"texture": ExtResource("18_qvhgf")
}, {
"duration": 1.0,
"texture": ExtResource("19_qk1yu")
}, {
"duration": 1.0,
"texture": ExtResource("20_24unw")
}, {
"duration": 1.0,
"texture": ExtResource("21_3numq")
}],
"loop": false,
"name": &"idle",
"speed": 0.0
}]

[sub_resource type="Animation" id="Animation_yjofp"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4gyt5"]
resource_name = "attack"
length = 1.1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/HitBoxCollisionShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_u880s"]
resource_name = "death"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 7]
}

[sub_resource type="Animation" id="Animation_tpiwx"]
resource_name = "idle"
length = 0.8
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_820cg"]
_data = {
"RESET": SubResource("Animation_yjofp"),
"attack": SubResource("Animation_4gyt5"),
"death": SubResource("Animation_u880s"),
"idle": SubResource("Animation_tpiwx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tsgc6"]
size = Vector2(20, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ig6md"]
size = Vector2(48, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r3rx4"]
size = Vector2(41, 31)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kv032"]
bg_color = Color(0.226707, 0.226708, 0.226707, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rjrd5"]
bg_color = Color(1, 0.151344, 0.108333, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_as6ir"]
size = Vector2(517, 35)

[node name="BossSlime" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_1ks83")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5w2is")
animation = &"run"
offset = Vector2(10, 0)
script = ExtResource("22_853x2")
flipped_position = Vector2(-20, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_820cg")
}

[node name="AnimationTree" type="AnimationTree" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visibility_layer = 3
position = Vector2(20, 7)
shape = SubResource("RectangleShape2D_tsgc6")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("23_xislm")

[node name="HurtBoxCollisionShape" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(20, 3)
shape = SubResource("RectangleShape2D_ig6md")

[node name="Audio" type="Node2D" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("24_680pr")
damage = 20

[node name="HitBoxCollisionShape" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-6.5, 9.5)
shape = SubResource("RectangleShape2D_r3rx4")
disabled = true
script = ExtResource("22_853x2")

[node name="Health" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -3.0
offset_top = -17.5
offset_right = 37.0
offset_bottom = 22.5
grow_horizontal = 2
scale = Vector2(0.1, 0.1)

[node name="ProgressBar" type="ProgressBar" parent="Health"]
layout_mode = 0
offset_left = 60.0
offset_top = -65.0
offset_right = 352.0
offset_bottom = -36.0
theme_override_styles/background = SubResource("StyleBoxFlat_kv032")
theme_override_styles/fill = SubResource("StyleBoxFlat_rjrd5")
value = 50.0
show_percentage = false

[node name="Border" type="ColorRect" parent="Health"]
z_index = -15
layout_mode = 0
offset_left = 50.0
offset_top = -75.0
offset_right = 354.0
offset_bottom = -33.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="Health"]
layout_mode = 0
offset_left = -10.0
offset_top = -85.0
offset_right = 590.0
offset_bottom = 515.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("25_iakgd")

[node name="Label" type="Label" parent="Health"]
visible = false
z_index = 2
layout_mode = 0
offset_left = -14.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "100/100"

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(18.5, 8)
shape = SubResource("RectangleShape2D_as6ir")
debug_color = Color(0.841998, 0.106654, 0.880724, 0.42)

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="CharacterDirectionChange" from="." to="HitBox/HitBoxCollisionShape" method="_on_character_body_2d_character_direction_change"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
